--- a/css/style.css
+++ b/css/style.css
@@ -864,7 +864,7 @@ a:hover{
     }
 
     .home{
-        background-image: url(../image/mobile/bg-vert.png);
+        background-image: url(../image/bg-vert1.png);
         background-repeat: no-repeat;
         -webkit-background-size: cover;
         -moz-background-size: cover;
